--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-query": "^5.51.15",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "lucide-vue-next": "^0.379.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
@@ -27,13 +29,18 @@
     "vue-sonner": "^1.1.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@iconify-json/radix-icons": "^1.1.14",
     "@iconify/vue": "^4.1.2",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.8.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.9.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.0.0",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
